--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,6 @@
 {
-    "workbench.colorTheme": "Dracula"
+    "workbench.colorTheme": "Default Dark+",
+    "cSpell.words": [
+        "beyonce"
+    ]
 }
